# quaternion_algebra

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
quaternion_algebra/: algebra.py  slerp.py  trajectory_smoothing.py
scripts/: continous_quaternion_trajectory.py  diff_quanternion_trajectory.py  quaternion.pkl
