<?xml version="1.0"?>
<package format="2">
  <name>quaternion_algebra</name>
  <version>0.1.0</version>
  <description>Quaternion algebra tool</description>

  <maintainer email="g.franzese@tudelft.nl">Giovanni Franzese</maintainer>

  <license>MIT License</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>






